gccida/g3/eiremain
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/eiremain/src/real.c:6260:12: error: expected expression
*( _OWORD *)equot = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/eiremain/src/real.c:6260:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)equot = 0LL; 
   ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/eiremain/src/obj/real.o] Error 1
